--- a/Flash-Chat-iOS13/Flash Chat iOS13/Views/MessageCell.xib
+++ b/Flash-Chat-iOS13/Flash Chat iOS13/Views/MessageCell.xib
@@ -4,21 +4,74 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24504"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MessageCell" customModule="Flash_Chat_iOS13" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" id="KGk-i7-Jjw" customClass="MessageCell" customModule="Flash_Chat_iOS13" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ym9-I0-FvV">
+                        <rect key="frame" x="10" y="10" width="300" height="40"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BLs-2V-01E">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BGq-Hx-RNr">
+                                        <rect key="frame" x="10" y="12" width="220" height="11"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" name="BrandLightPurple"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="BrandPurple"/>
+                                <constraints>
+                                    <constraint firstItem="BGq-Hx-RNr" firstAttribute="top" secondItem="BLs-2V-01E" secondAttribute="top" constant="12" id="28d-nA-M3J"/>
+                                    <constraint firstItem="BGq-Hx-RNr" firstAttribute="leading" secondItem="BLs-2V-01E" secondAttribute="leading" constant="10" id="LOA-N9-4wZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="BGq-Hx-RNr" secondAttribute="bottom" constant="17" id="g1V-Xe-Jak"/>
+                                    <constraint firstAttribute="trailing" secondItem="BGq-Hx-RNr" secondAttribute="trailing" constant="10" id="inU-6l-h8U"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="vhu-gf-n1N">
+                                <rect key="frame" x="260" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="raZ-WX-tFS"/>
+                                    <constraint firstAttribute="width" constant="40" id="tTg-lH-qrR"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                    </stackView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="ym9-I0-FvV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="3eX-1K-vkb"/>
+                    <constraint firstAttribute="bottom" secondItem="ym9-I0-FvV" secondAttribute="bottom" constant="10" id="73x-O0-XXY"/>
+                    <constraint firstItem="ym9-I0-FvV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="NQe-zy-MNw"/>
+                    <constraint firstAttribute="trailing" secondItem="ym9-I0-FvV" secondAttribute="trailing" constant="10" id="RdU-9x-64C"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="-176" y="127"/>
+            <connections>
+                <outlet property="label" destination="BGq-Hx-RNr" id="PSb-p6-7t4"/>
+                <outlet property="messageBubble" destination="BLs-2V-01E" id="gHz-Dh-edO"/>
+                <outlet property="rightImageView" destination="vhu-gf-n1N" id="omp-ZV-76c"/>
+            </connections>
+            <point key="canvasLocation" x="-63" y="110"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="MeAvatar" width="36" height="36"/>
+        <namedColor name="BrandLightPurple">
+            <color red="0.98000001907348633" green="0.9649999737739563" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="BrandPurple">
+            <color red="0.67500001192092896" green="0.43500000238418579" blue="0.9179999828338623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
