--- a/Flash-Chat-iOS13/Flash Chat iOS13/Views/MessageCell.xib
+++ b/Flash-Chat-iOS13/Flash Chat iOS13/Views/MessageCell.xib
@@ -21,11 +21,18 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ym9-I0-FvV">
                         <rect key="frame" x="10" y="10" width="300" height="40"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YouAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="zQ1-bV-nuf">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="5J2-C5-UQe"/>
+                                    <constraint firstAttribute="width" constant="40" id="sG3-U3-RT4"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BLs-2V-01E">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="40"/>
+                                <rect key="frame" x="60" y="0.0" width="180" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BGq-Hx-RNr">
-                                        <rect key="frame" x="10" y="12" width="220" height="11"/>
+                                        <rect key="frame" x="10" y="12" width="160" height="11"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" name="BrandLightPurple"/>
                                         <nil key="highlightedColor"/>
@@ -59,6 +66,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="label" destination="BGq-Hx-RNr" id="PSb-p6-7t4"/>
+                <outlet property="leftImageView" destination="zQ1-bV-nuf" id="vri-86-LnJ"/>
                 <outlet property="messageBubble" destination="BLs-2V-01E" id="gHz-Dh-edO"/>
                 <outlet property="rightImageView" destination="vhu-gf-n1N" id="omp-ZV-76c"/>
             </connections>
@@ -67,6 +75,7 @@
     </objects>
     <resources>
         <image name="MeAvatar" width="36" height="36"/>
+        <image name="YouAvatar" width="36" height="36"/>
         <namedColor name="BrandLightPurple">
             <color red="0.98000001907348633" green="0.9649999737739563" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
